@startuml
title FitChasers Goal Weight Tracker - Class Diagram

skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam ArrowColor #444
skinparam ClassBorderColor #222
skinparam ClassBackgroundColor #FAFAFA

hide circle
hide stereotype

class GoalWeightTracker {
-DF: DateTimeFormatter <<static>>
-ui: UI
-goalWeight: Double
-setDate: LocalDate
--
+GoalWeightTracker()
+handleSetGoal(input: String): void
+handleViewGoal(currentWeight: Double): void
-saveGoal(): void
-loadGoal(): void
+hasGoal(): boolean
+getGoalWeight(): double
}

class UI {
-scanner: Scanner
--
+showMessage(message: String): void
+readInsideRightBubble(prompt: String): String
}

class FileHandler {
-ui: UI
--
+saveGoal(goalWeight: double, setDate: LocalDate): void
+loadGoal(): Double[]
}

' === Relationships ===
GoalWeightTracker --> UI
GoalWeightTracker ..> FileHandler

@enduml